--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,7 @@
   --card-foreground: oklch(0.15 0.01 280);
   --popover: oklch(0.98 0.005 280);
   --popover-foreground: oklch(0.15 0.01 280);
-  --primary: oklch(0.65 0.2 280);
+  --primary: oklch(0.55 0.2 280);
   --primary-foreground: oklch(0.98 0 0);
   --secondary: oklch(0.92 0.01 280);
   --secondary-foreground: oklch(0.15 0.01 280);
@@ -115,9 +115,22 @@
   }
 }
 
+.header-text {
+  /* Updated gradient from green to violet */
+  /* background: oklch(0.55 0.2 280); */
+  background: oklch(0.55 0.2 280);
+
+  /* background: linear-gradient(135deg, oklch(0.45 0.2 280) 0%, oklch(0.85 0.2 280) 100%); */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
 .gradient-text {
   /* Updated gradient from green to violet */
-  background: linear-gradient(135deg, oklch(0.85 0.2 280) 0%, oklch(0.75 0.2 280) 100%);
+  background: #9B5DE0;
+
+  /* background: linear-gradient(135deg, oklch(0.45 0.2 280) 0%, oklch(0.85 0.2 280) 100%); */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
